# oh-no-bot

./: CMakeLists.txt  README.md  config.json  ohnobotd.service
src/: bot.cpp  bot.h  botv2.cpp  botv2.h  cache.hpp  command.h  config.cpp  config.h  event.cpp  event.h  gateway.cpp  gateway.h  http_request.cpp  http_request.h  main.cpp  opcode.cpp  opcode.h
src/command/: heartbeat.cpp  identify.cpp  resume.cpp
